frontend/src/container/SideNav/SideNav.styles.scss
/* ... */
.nav-item-label-container {
	display: flex;
	align-items: center;
	justify-content: space-between;

	& span {
		display: block;
		max-width: 286px;
		white-space: nowrap; /* Prevents line breaks */
		overflow: hidden; /* Hides overflowing content */
		text-overflow: ellipsis;
	}
}

.nav-dropdown-overlay {
	.ant-dropdown-menu {
		margin-left: 8px !important;
		padding: 0px !important;
		width: 360px !important;
		border-radius: 3px !important;

		.ant-dropdown-menu-item {
			.ant-dropdown-menu-title-content {
				color: var(--l2-foreground);
				font-family: Inter;
				font-size: 12px;
				font-style: normal;
				font-weight: 300;
				line-height: normal;
				letter-spacing: 0.14px;
			}

			&:hover:not(.ant-dropdown-menu-item-disabled) {
				.ant-dropdown-menu-title-content {
					color: var(--l1-foreground);
				}
			}
		}
	}
}

.settings-dropdown {
	.user-settings-dropdown-logged-in-section {
		display: flex;
		flex-direction: column;
		gap: 8px;

		.user-settings-dropdown-label-text {
			color: var(--l3-foreground);
			font-family: Inter;
			font-size: var(--uppercase-small-500-font-size);
			font-weight: var(--uppercase-small-500-font-weight);
			font-style: normal;
			line-height: 18px;
			letter-spacing: 0.88px;
			text-transform: uppercase;
		}

		.user-settings-dropdown-label-email {
			color: var(--l1-foreground);
			font-family: Inter;
			font-size: var(--font-size-xs);
			font-style: normal;
			line-height: normal;
			letter-spacing: 0.14px;
		}
	}

	.ant-dropdown-menu-item-divider {
		background-color: var(--secondary) !important;
	}

	.ant-dropdown-menu-item-disabled {
		opacity: 0.7;
	}

	.ant-dropdown-menu {
		width: 100% !important;
	}
}

.settings-dropdown,
.help-support-dropdown {
	.ant-dropdown-menu-item {
		min-height: 32px;

		.ant-dropdown-menu-title-content {
			color: var(--l1-foreground) !important;
		}

		.user-settings-dropdown-logout-section {
			color: var(--danger-background);
			pointer-events: auto;
		}
	}
}

.secondary-nav-items {
	.nav-item {
		position: relative;

		.nav-item-active-marker {
			position: absolute;
			left: -5px;
			top: 50%;
			transform: translateY(-50%);
			margin: 0;
			width: 8px;
			height: 24px;
			z-index: 1;
		}
	}

	.nav-item-data {
		margin-left: 8px !important;
	}
}

.reorder-shortcut-nav-items-modal {
	width: 384px !important;

	.ant-modal-content {
		padding: 0;
		border-radius: 4px;
		border: 1px solid var(--l1-border);
		background: var(--l3-background);
		box-shadow: 0px -4px 16px 2px rgba(0, 0, 0, 0.2);

		.ant-modal-header {
			padding: 16px;
			background: var(--card);
			border-bottom: 1px solid var(--l1-border);
		}

		.ant-modal-body {
			padding: 12px 16px 0px 16px;

			.ant-typography {
				color: var(--l1-foreground);
				font-family: Inter;
				font-size: 13px;
				font-style: normal;
				font-weight: 500;
				line-height: 20px; /* 142.857% */
			}

			.update-name-input {
				margin-top: 8px;
				display: flex;
				gap: 8px;
			}

			.reorder-shortcut-nav-items-container {
				display: flex;
				flex-direction: column;
				gap: 8px;
				margin-bottom: 16px;
				border: 1px solid var(--l1-border);
				border-radius: 4px;

				.reorder-shortcut-nav-item {
					display: flex;
					align-items: center;
					gap: 8px;

					display: flex;
					height: 32px;
					padding: 6px 8px;
					align-items: center;
					gap: 16px;
					border-bottom: 1px solid var(--l1-border);

					.reorder-shortcut-nav-item-grab-icon {
						display: flex;
						cursor: grab;
					}

					.reorder-shortcut-nav-item-icon {
						display: flex;

						color: var(--l1-foreground);
						font-family: Inter;
						font-size: 13px;
						font-style: normal;
						font-weight: 400;
						line-height: 18px; /* 128.571% */
					}

					.reorder-shortcut-nav-item-label {
						display: flex;

						color: var(--l1-foreground);
						font-family: Inter;
						font-size: 13px;
						font-style: normal;
						font-weight: 400;
						line-height: 18px; /* 128.571% */
					}
				}
			}

			.ant-color-picker-trigger {
				padding: 6px;
				border-radius: 2px;
				border: 1px solid var(--l1-border);
				background: var(--l2-background);
				width: 32px;
				height: 32px;

				.ant-color-picker-color-block {
					border-radius: 50px;
					width: 16px;
					height: 16px;
					flex-shrink: 0;

					.ant-color-picker-color-block-inner {
						display: flex;
						justify-content: center;
						align-items: center;
					}
				}
			}
		}

		.ant-modal-footer {
			display: flex;
			justify-content: flex-end;
			padding: 16px 16px;
			margin: 0;

			> button {
				display: flex;
				align-items: center;
				border-radius: 2px;
				background: var(--primary-background) !important;
				color: var(--primary-foreground) !important;
				font-family: Inter;
				font-size: 12px;
				font-style: normal;
				font-weight: 500;
				line-height: 24px;

				&.secondary-btn {
					background-color: var(--secondary-background) !important;
					border: 1px solid var(--secondary-border) !important;

					color: var(--secondary-foreground) !important;

					/* button/ small  */
					font-family: Inter;
					font-size: 12px;
					font-style: normal;
					font-weight: 500;
					line-height: 24px; /* 200% */
				}
			}
		}
	}

	.title {
		color: var(--l1-foreground);
		font-family: Inter;
		font-size: 13px;
		font-style: normal;
		font-weight: 400;
		line-height: 20px;
	}
}

.help-support-dropdown li.ant-dropdown-menu-item-divider {
	background-color: var(--secondary) !important;
}
/* ... */

